# SignedByMe

./: .gitignore  CHANGELOG.md  LICENSE  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  clients.json  clients.json.example  iOS-MIGRATION-PLAN.md  index.html  requirements.txt  roots.json  settings.gradle.kts
.github/workflows/: build-verifier.yml
DID_BTC/DID_BTC/: ContentView.swift  DID_BTC-Bridging-Header.h  DID_Wallet_Manager.swift  stwo_dlc_bridge.h
DID_BTC/DID_BTC/App/: SignedByMeApp.swift
DID_BTC/DID_BTC/Crypto/: NativeBridge.swift
DID_BTC/DID_BTC/Managers/: BreezWalletManager.swift  DIDManager.swift  KeychainManager.swift  iCloudBackupManager.swift
DID_BTC/DID_BTC/Models/: EnrollmentData.swift  LoginSession.swift  WitnessData.swift
DID_BTC/DID_BTC/Services/: APIService.swift
DID_BTC/DID_BTC/ViewModels/: LoginViewModel.swift  OnboardingViewModel.swift
DID_BTC/DID_BTC/Views/Components/: QRScannerView.swift
DID_BTC/DID_BTC/Views/Login/: LoginView.swift
DID_BTC/DID_BTC/Views/Onboarding/: IdentitySetupView.swift  OnboardingContainerView.swift  WalletSetupView.swift
DID_BTC/DID_BTC/Views/Wallet/: WalletView.swift
_backup/: login.local.py
_vm_stage/app/lib/: crypto.py
_vm_stage/app/models/: auth.py  common.py
_vm_stage/app/routes/: unlock.py
acme-site/: index.html
acme-site/css/: style.css
acme-site/js/: app.js
api/: requirements.txt
api/app/: main.py
api/app/models/: claims.py
api/app/routes/: auth.py  claims.py  invoice.py  lightning.py  login.py
app/: build.gradle.kts  main.py  oidc_discovery.py  oidc_endpoints.py  proguard-rules.pro
app/lib/: crypto.py  store.py  strike.py  stwo_verify.py
app/models/: unlock.py
app/routes/: admin.py  enterprise.py  enterprise_payments.py  login_invoice.py  membership.py  roots.py  session.py
app/services/: strike.py
app/src/androidTest/java/com/privacylion/btcdid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/witnesses/: acme_acme-allowlist-1771011349.json
app/src/main/java/com/privacylion/btcdid/: BackupStateManager.kt  BreezWalletManager.kt  DidWalletManager.kt  DlcManager.kt  GoogleDriveBackupManager.kt  LoginViewModel.kt  MainActivity.kt  NativeBridge.kt  QRScannerDialog.kt  SplashActivity.kt
app/src/main/java/com/privacylion/btcdid/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_coinbase.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_river.xml  ic_strike.xml  splash_background.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/test/java/com/privacylion/btcdid/: ExampleUnitTest.kt
docs/: API_REFERENCE.md  AUTHENTICATION.md  EXAMPLES.md  ID_TOKEN.md  MEMBERSHIP.md  QUICK_START.md  README.md  STWO_INTEGRATION.md  STWO_INTEGRATION_PLAN.md  TROUBLESHOOTING.md  WITNESS_SPEC.md
examples/: .env.example  clients.json.example
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mockups/: backup-prompt-flow.html
native/btcdid_core/: Cargo.toml
native/btcdid_core/src/: dlc_builder.rs  dlc_oracle.rs  key_manager.rs  lib.rs  lightning.rs  sha256_circuit.rs  stwo_prover.rs  stwo_real.rs
native/btcdid_core/src/membership/: binding.rs  circuit.rs  jni.rs  merkle.rs  merkle_hash.rs  mod.rs  poseidon.rs  poseidon2_m31.rs  proof.rs
scripts/: deploy.sh
site/: enterprise-demo.js  index.html  layout-move-buttons.js  qr-addon.js
site/admin/: index.html
tests/: test_poseidon2_integration.py
tools/: test_e2e.py
tools/sbm-tree/: README.md  sbm_tree.py  test_commitments.csv
