[package]
name = "btcdid_core"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# JNI for Android
jni = "0.21"
anyhow = "1"

# Cryptographic primitives
sha2 = "0.10"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "schnorr"] }
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

# Bitcoin / Schnorr / Taproot
secp256k1 = { version = "0.28", features = ["rand-std", "global-context"] }
bitcoin = { version = "0.31", features = ["rand-std"] }

# Lightning invoice generation
lightning-invoice = "0.29"

# STARK proving (lightweight)
winterfell = { version = "0.8", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
full-stwo = ["winterfell"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
