[package]
name = "btcdid_core"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stwo_verifier"
path = "src/bin/stwo_verifier.rs"
required-features = ["real-stwo"]

[dependencies]
# JNI for Android
jni = "0.21"
anyhow = "1"

# Cryptographic primitives
sha2 = "0.10"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "schnorr"] }
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

# Bitcoin / Schnorr / Taproot
secp256k1 = { version = "0.28", features = ["rand-std", "global-context"] }
bitcoin = { version = "0.31", features = ["rand-std"] }

# Lightning invoice generation
lightning-invoice = "0.29"

# Real STWO STARK prover from StarkWare
stwo = { git = "https://github.com/starkware-libs/stwo", branch = "dev", features = ["prover"], optional = true }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", branch = "dev", features = ["prover"], optional = true }

# Additional deps for STWO
itertools = { version = "0.12", optional = true }
num-traits = { version = "0.2", optional = true }
tracing = { version = "0.1", optional = true }
bincode = { version = "1.3", optional = true }
base64 = { version = "0.21", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
real-stwo = ["stwo", "stwo-constraint-framework", "itertools", "num-traits", "tracing", "bincode", "base64"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
